# CLionProjects

Parallel/: CMakeLists.txt  Task10.c  Task11.c  Task12.c  Task13.c  Task3.c  Task4.c  Task5.c  Task6.c  Task7.c  Task8.c  Task9.c  TaskOne.c  TaskTwo.c
